# ai-engineer-practice

./: Dockerfile
lambda-deploy-fastapi/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
lambda-deploy-fastapi/scripts/: deploy.sh
lambda-deploy-fastapi/src/: main.py
lambda-deploy-fastapi/terraform/: main.tf  variables.tf
line-ai-chatbot/: .gitignore  handler.py  main.py  pyproject.toml
line-ai-chatbot/agent/: Dockerfile  app.py  chatbot.py  main.py  prompt.md  test_mcp.py
line-ai-chatbot/agent/__old/: chatbot.py  main.py
line-ai-chatbot/agent/chatbot/: agent.py  models.py
line-ai-chatbot/data/: 臺北市公廁點位資訊.csv
line-ai-chatbot/mcp_server/: math_mcp.py  weather_mcp.py
line-ai-chatbot/mcp_server/toilet_mcp_server/: toilet_mcp_server.py
line-ai-chatbot/notebook/: ai-chatbot.ipynb  line-bot-conn-test.ipynb  tavily-langgraph.ipynb
line-ai-chatbot/scripts/: tf_apply_with_env.sh
line-ai-chatbot/terraform/: ecr.tf  ecs.tf  iam.tf  output.tf  variables.tf  vpc.tf
line-ai-chatbot/utils/: utils.py
native-rag-example/: README.md  main.py  pyproject.toml
native-rag-example/notebook/: rag.ipynb
